# local-doc-summarizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
src/services/: document_service.py  llm_service.py
